fix layout issue with suscriber button in mobile

--- a/src/app/public/home/containers/home/home.component.scss
+++ b/src/app/public/home/containers/home/home.component.scss
@@ -20,8 +20,14 @@
   max-height: 700px;
   overflow: hidden;
 
+  .notification__button-container {
+    display: flex;
+    justify-content: center;
+  }
+
   .notification__img-container {
-    margin-top: -60px;
+    margin: auto;
+    margin-top: -10px;
   }
 }
 
